--- a/ltconfig.in
+++ b/ltconfig.in
@@ -806,7 +806,10 @@ if test "$with_gnu_ld" = yes; then
   sunos4*)
     archive_cmds='$LD -assert pure-text -Bstatic -o $lib$libobjs'
     hardcode_direct=yes
-    hardcode_minus_L=yes
+    # The GNU linker will only hardcode -L options if -rpath is not
+    # used, but we will be using -rpath because we set
+    # hardcode_libdir_flag_spec below.
+    hardcode_minus_L=no
     hardcode_shlibpath_var=no
     ;;
 
